[package]
name = "ambolt"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
poem = "1.3.52"
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tracing-subscriber = { version ="0.3.9", features = ["env-filter"] }
